cluster/homelab/apps/CTF/CommandInjection/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: command-injection1
  namespace: ctf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ci.oplabs.us`)
      kind: Rule
      middlewares:
        []
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: command-injection1
          port: 80
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: command-injection2
  namespace: ctf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ci2.oplabs.us`)
      kind: Rule
      middlewares:
        []
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: command-injection2
          port: 80
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: command-injection3
  namespace: ctf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ci3.oplabs.us`)
      kind: Rule
      middlewares:
        []
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: command-injection3
          port: 80
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: command-injection4
  namespace: ctf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ci4.oplabs.us`)
      kind: Rule
      middlewares:
        []
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: command-injection4
          port: 80
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
